fix: change some base styles and fix header align

--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -83,6 +83,7 @@ li {
   list-style: none;
 }
 
+h1,
 h2,
 h3,
 p {
@@ -111,7 +112,12 @@ img {
   object-fit: cover;
 }
 
+.block {
+  padding-inline: 20px;
+}
+
 .header {
+  margin-inline: auto;
   display: flex;
   justify-content: space-between;
   align-items: center;
